--- a/TopSuites/post.html
+++ b/TopSuites/post.html
@@ -45,12 +45,12 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20240910213811" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20240910213811" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20240925150312" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20240925150312" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20240910213811" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20240910213811" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20240925150312" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20240925150312" />
 
 </head>
 
@@ -130,11 +130,11 @@
             <div class="dropdown">
               <button type="button" class="dropdown__button">English</button>
               <ul class="dropdown__list">
-                <li aria-checked="true" class="dropdown__list-item">
-                  <a href="" class="dropdown__link">English</a>
+                <li class="dropdown__list-item">
+                  <a href="/" class="dropdown__link">English</a>
                 </li>
-                <li aria-checked="false" class="dropdown__list-item">
-                  <a href="" class="dropdown__link">Russian</a>
+                <li class="dropdown__list-item">
+                  <a href="/ru" class="dropdown__link">Russian</a>
                 </li>
               </ul>
             </div>
@@ -332,11 +332,11 @@
     </footer>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20240910213811"></script>
-  <script src="js/libs/fancybox.min.js?_v=20240910213811"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20240925150312"></script>
+  <script src="js/libs/fancybox.min.js?_v=20240925150312"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20240910213811"></script>
+  <script src="js/app.min.js?_v=20240925150312"></script>
 </body>
 
 </html>
