--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -58,11 +58,11 @@
                 <div class="dropdown">
                     <button type="button" class="dropdown__button">English</button>
                     <ul class="dropdown__list">
-                        <li aria-checked="true" class="dropdown__list-item">
-                            <a href="" class="dropdown__link">English</a>
+                        <li class="dropdown__list-item">
+                            <a href="/" class="dropdown__link">English</a>
                         </li>
-                        <li aria-checked="false" class="dropdown__list-item">
-                            <a href="" class="dropdown__link">Russian</a>
+                        <li class="dropdown__list-item">
+                            <a href="/ru" class="dropdown__link">Russian</a>
                         </li>
                     </ul>
                 </div>
