--- a/TopSuites/gallery.html
+++ b/TopSuites/gallery.html
@@ -45,12 +45,12 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20240925150312" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20240925150312" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20240925183459" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20240925183459" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20240925150312" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20240925150312" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20240925183459" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20240925183459" />
 
 </head>
 
@@ -99,11 +99,11 @@
                 <div class="dropdown dropdown-black">
                   <button type="button" class="dropdown__button">English</button>
                   <ul class="dropdown__list">
-                    <li aria-checked="true" class="dropdown__list-item">
-                      <a href="" class="dropdown__link">English</a>
+                    <li class="dropdown__list-item">
+                      <a href="/" data-lang="en" class="dropdown__link">English</a>
                     </li>
-                    <li aria-checked="false" class="dropdown__list-item">
-                      <a href="" class="dropdown__link">Russian</a>
+                    <li class="dropdown__list-item">
+                      <a href="/ru" data-lang="ru" class="dropdown__link">Russian</a>
                     </li>
                   </ul>
                 </div>
@@ -131,10 +131,10 @@
               <button type="button" class="dropdown__button">English</button>
               <ul class="dropdown__list">
                 <li class="dropdown__list-item">
-                  <a href="/" class="dropdown__link">English</a>
+                  <a href="/" data-lang="en" class="dropdown__link">English</a>
                 </li>
                 <li class="dropdown__list-item">
-                  <a href="/ru" class="dropdown__link">Russian</a>
+                  <a href="/ru" data-lang="ru" class="dropdown__link">Russian</a>
                 </li>
               </ul>
             </div>
@@ -393,11 +393,11 @@
     </footer>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20240925150312"></script>
-  <script src="js/libs/fancybox.min.js?_v=20240925150312"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20240925183459"></script>
+  <script src="js/libs/fancybox.min.js?_v=20240925183459"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20240925150312"></script>
+  <script src="js/app.min.js?_v=20240925183459"></script>
 </body>
 
 </html>
