--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -27,11 +27,11 @@
                         <div class="dropdown dropdown-black">
                             <button type="button" class="dropdown__button">English</button>
                             <ul class="dropdown__list">
-                                <li aria-checked="true" class="dropdown__list-item">
-                                    <a href="" class="dropdown__link">English</a>
+                                <li class="dropdown__list-item">
+                                    <a href="/" data-lang="en" class="dropdown__link">English</a>
                                 </li>
-                                <li aria-checked="false" class="dropdown__list-item">
-                                    <a href="" class="dropdown__link">Russian</a>
+                                <li class="dropdown__list-item">
+                                    <a href="/ru" data-lang="ru" class="dropdown__link">Russian</a>
                                 </li>
                             </ul>
                         </div>
@@ -59,10 +59,10 @@
                     <button type="button" class="dropdown__button">English</button>
                     <ul class="dropdown__list">
                         <li class="dropdown__list-item">
-                            <a href="/" class="dropdown__link">English</a>
+                            <a href="/" data-lang="en" class="dropdown__link">English</a>
                         </li>
                         <li class="dropdown__list-item">
-                            <a href="/ru" class="dropdown__link">Russian</a>
+                            <a href="/ru" data-lang="ru" class="dropdown__link">Russian</a>
                         </li>
                     </ul>
                 </div>
