--- a/TopSuites/service.html
+++ b/TopSuites/service.html
@@ -45,13 +45,13 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241109123038" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241109123038" />
-  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241109123038" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241120103451" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241120103451" />
+  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241120103451" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20241109123038" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20241109123038" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20241120103451" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20241120103451" />
 
 </head>
 
@@ -179,16 +179,16 @@
           </ul>
           <div class="service-page__btns" data-animate="bottom">
             <a href="" class="service-page__btn btn btn-primary icon-plus">Заказать услугу</a>
-            <a href="" class="service-page__btn btn btn-primary-outline">Рассчитать стоимость</a>
+            <a href="#calc" class="service-page__btn btn btn-primary-outline">Рассчитать стоимость</a>
           </div>
         </div>
       </section>
-      <section class="calc">
+      <section id="calc" class="calc">
         <div class="calc__container">
           <h2 class="calc__title title-xl" data-animate="bottom">
             Калькулятор
           </h2>
-          <div class="calc__body" data-animate="bottom">
+          <form action="#" class="calc__body" data-animate="bottom">
             <div class="calc__block calc__block-lg">
               <div class="calc__block-caption">
                 Площадь, м<sup>2</sup>
@@ -332,7 +332,7 @@
                   2 300 032 AED
                 </div>
               </div>
-              <form action="#" class="calc__total-form">
+              <div class="calc__total-form">
                 <div class="form__row">
                   <label class="form__field">
                     <input type="tel" name="phone" data-required class="form__input" placeholder="">
@@ -341,9 +341,9 @@
                   <span class="form__error">Введите корректный номер телефона</span>
                 </div>
                 <button type="submit" class="btn btn-primary btn-sm">Вызвать замерщика</button>
-              </form>
+              </div>
             </div>
-          </div>
+          </form>
         </div>
       </section>
       <section class="examples">
@@ -2019,12 +2019,12 @@
     </div>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20241109123038"></script>
-  <script src="js/libs/fancybox.min.js?_v=20241109123038"></script>
-  <script src="js/libs/nouislider.min.js?_v=20241109123038"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20241120103451"></script>
+  <script src="js/libs/fancybox.min.js?_v=20241120103451"></script>
+  <script src="js/libs/nouislider.min.js?_v=20241120103451"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20241109123038"></script>
+  <script src="js/app.min.js?_v=20241120103451"></script>
 </body>
 
 </html>
