--- a/TopSuites/service.html
+++ b/TopSuites/service.html
@@ -45,13 +45,13 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241126221027" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241126221027" />
-  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241126221027" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241203212904" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241203212904" />
+  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241203212904" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20241126221027" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20241126221027" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20241203212904" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20241203212904" />
 
 </head>
 
@@ -341,6 +341,13 @@
                   <span class="form__error">Введите корректный номер телефона</span>
                 </div>
                 <button type="submit" class="btn btn-primary btn-sm">Вызвать замерщика</button>
+              </div>
+            </div>
+            <div class="popup">
+              <div class="popup__body">
+                <div class="popup__title">Thank you!</div>
+                <p class="popup__subtitle">We’re already recived your request and comming to you as soon as possible </p>
+                <button type="button" data-fancybox-close class="popup__btn btn btn-secondary">Okay</button>
               </div>
             </div>
           </form>
@@ -734,6 +741,13 @@
                 <span class="form__error">Введите корректный номер телефона</span>
               </div>
               <button type="submit" class="btn btn-primary btn-sm">Отправить</button>
+              <div class="popup">
+                <div class="popup__body">
+                  <div class="popup__title">Thank you!</div>
+                  <p class="popup__subtitle">We’re already recived your request and comming to you as soon as possible </p>
+                  <button type="button" data-fancybox-close class="popup__btn btn btn-secondary">Okay</button>
+                </div>
+              </div>
             </form>
           </div>
         </div>
@@ -2019,12 +2033,12 @@
     </div>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20241126221027"></script>
-  <script src="js/libs/fancybox.min.js?_v=20241126221027"></script>
-  <script src="js/libs/nouislider.min.js?_v=20241126221027"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20241203212904"></script>
+  <script src="js/libs/fancybox.min.js?_v=20241203212904"></script>
+  <script src="js/libs/nouislider.min.js?_v=20241203212904"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20241126221027"></script>
+  <script src="js/app.min.js?_v=20241203212904"></script>
 </body>
 
 </html>
