--- a/src/service.html
+++ b/src/service.html
@@ -525,17 +525,23 @@
                                         </div>
                                         <div class="types-repairs__slider swiper">
                                             <div class="swiper-wrapper">
-                                                <a href="@img/gallery/22.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
-                                                    <img src="@img/gallery/22.jpg" class="cover-image" alt="Фото проекта">
+                                                <a href="@img/gallery/desgin_re1.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                                                    <img src="@img/gallery/desgin_re1.jpg" class="cover-image" alt="Фото проекта">
                                                 </a>
-                                                <a href="@img/gallery/01.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
-                                                    <img src="@img/gallery/01.jpg" class="cover-image" alt="Фото проекта">
+                                                <a href="@img/gallery/design_re2.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                                                    <img src="@img/gallery/design_re2.jpg" class="cover-image" alt="Фото проекта">
                                                 </a>
-                                                <a href="@img/gallery/02.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
-                                                    <img src="@img/gallery/02.jpg" class="cover-image" alt="Фото проекта">
+                                                <a href="@img/gallery/design_re3.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                                                    <img src="@img/gallery/design_re3.jpg" class="cover-image" alt="Фото проекта">
                                                 </a>
-                                                <a href="@img/gallery/03.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
-                                                    <img src="@img/gallery/03.jpg" class="cover-image" alt="Фото проекта">
+                                                <a href="@img/gallery/design_re4.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                                                    <img src="@img/gallery/design_re4.jpg" class="cover-image" alt="Фото проекта">
+                                                </a>
+                                                <a href="@img/gallery/design_re5.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                                                    <img src="@img/gallery/design_re5.jpg" class="cover-image" alt="Фото проекта">
+                                                </a>
+                                                <a href="@img/gallery/design_re6.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                                                    <img src="@img/gallery/design_re6.jpg" class="cover-image" alt="Фото проекта">
                                                 </a>
                                             </div>
                                             <div class="types-repairs__pagination swiper-pagination"></div>
@@ -892,7 +898,84 @@
                                                 </div>
                                             </div>
                                         </li>
+                                        <li class="where__item hidden" data-animate="bottom">
+                                            <div class="where__item-image">
+                                                <img src="@img/where/01.jpg" class="cover-image" alt="img">
+                                            </div>
+                                            <div class="where__item-body">
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Локация</div>
+                                                    <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Жилой комплекс</div>
+                                                    <div class="where__item-text">Mamsha Al Saadiyat</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Застройщик</div>
+                                                    <div class="where__item-text">Provis</div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="where__item hidden" data-animate="bottom">
+                                            <div class="where__item-image">
+                                                <img src="@img/where/02.jpg" class="cover-image" alt="img">
+                                            </div>
+                                            <div class="where__item-body">
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Локация</div>
+                                                    <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Жилой комплекс</div>
+                                                    <div class="where__item-text">Mamsha Al Saadiyat</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Застройщик</div>
+                                                    <div class="where__item-text">Provis</div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="where__item hidden" data-animate="bottom">
+                                            <div class="where__item-image">
+                                                <img src="@img/where/03.jpg" class="cover-image" alt="img">
+                                            </div>
+                                            <div class="where__item-body">
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Локация</div>
+                                                    <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Жилой комплекс</div>
+                                                    <div class="where__item-text">Mamsha Al Saadiyat</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Застройщик</div>
+                                                    <div class="where__item-text">Provis</div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="where__item hidden" data-animate="bottom">
+                                            <div class="where__item-image">
+                                                <img src="@img/where/04.jpg" class="cover-image" alt="img">
+                                            </div>
+                                            <div class="where__item-body">
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Локация</div>
+                                                    <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Жилой комплекс</div>
+                                                    <div class="where__item-text">Mamsha Al Saadiyat</div>
+                                                </div>
+                                                <div class="where__item-column">
+                                                    <div class="where__item-caption">Застройщик</div>
+                                                    <div class="where__item-text">Provis</div>
+                                                </div>
+                                            </div>
+                                        </li>
                                     </ul>
+                                    <button class="where__more btn btn-primary-outline" data-animate="bottom">Показать еще</button>
                                 </div>
                                 <div class="where__tabs-content tab-content">
                                     <ul class="where__list">
@@ -1215,7 +1298,6 @@
                                     </ul>
                                 </div>
                             </div>
-                            <a href="" class="where__more btn btn-primary-outline" data-animate="bottom">Показать еще</a>
                         </div>
                     </div>
                 </section>
