--- a/TopSuites/service.html
+++ b/TopSuites/service.html
@@ -45,13 +45,13 @@
   <!-- Twitter -->
 
   <!-- plugins -->
-  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241206104348" />
-  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241206104348" />
-  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241206104348" />
+  <link rel="stylesheet" href="css/libs/swiper-bundle.min.css?_v=20241212212531" />
+  <link rel="stylesheet" href="css/libs/fancybox.css?_v=20241212212531" />
+  <link rel="stylesheet" href="css/libs/no-ui-slider.css?_v=20241212212531" />
   <!-- plugins -->
 
-  <link rel="stylesheet" href="css/reset.min.css?_v=20241206104348" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20241206104348" />
+  <link rel="stylesheet" href="css/reset.min.css?_v=20241212212531" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20241212212531" />
 
 </head>
 
@@ -685,28 +685,40 @@
                   </div>
                   <div class="types-repairs__slider swiper">
                     <div class="swiper-wrapper">
-                      <a href="img/gallery/22.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                      <a href="img/gallery/desgin_re1.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
                         <picture>
-                          <source srcset="img/gallery/22.webp" type="image/webp">
-                          <img src="img/gallery/22.jpg" class="cover-image" alt="Фото проекта">
+                          <source srcset="img/gallery/desgin_re1.webp" type="image/webp">
+                          <img src="img/gallery/desgin_re1.jpg" class="cover-image" alt="Фото проекта">
                         </picture>
                       </a>
-                      <a href="img/gallery/01.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                      <a href="img/gallery/design_re2.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
                         <picture>
-                          <source srcset="img/gallery/01.webp" type="image/webp">
-                          <img src="img/gallery/01.jpg" class="cover-image" alt="Фото проекта">
+                          <source srcset="img/gallery/design_re2.webp" type="image/webp">
+                          <img src="img/gallery/design_re2.jpg" class="cover-image" alt="Фото проекта">
                         </picture>
                       </a>
-                      <a href="img/gallery/02.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                      <a href="img/gallery/design_re3.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
                         <picture>
-                          <source srcset="img/gallery/02.webp" type="image/webp">
-                          <img src="img/gallery/02.jpg" class="cover-image" alt="Фото проекта">
+                          <source srcset="img/gallery/design_re3.webp" type="image/webp">
+                          <img src="img/gallery/design_re3.jpg" class="cover-image" alt="Фото проекта">
                         </picture>
                       </a>
-                      <a href="img/gallery/03.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                      <a href="img/gallery/design_re4.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
                         <picture>
-                          <source srcset="img/gallery/03.webp" type="image/webp">
-                          <img src="img/gallery/03.jpg" class="cover-image" alt="Фото проекта">
+                          <source srcset="img/gallery/design_re4.webp" type="image/webp">
+                          <img src="img/gallery/design_re4.jpg" class="cover-image" alt="Фото проекта">
+                        </picture>
+                      </a>
+                      <a href="img/gallery/design_re5.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                        <picture>
+                          <source srcset="img/gallery/design_re5.webp" type="image/webp">
+                          <img src="img/gallery/design_re5.jpg" class="cover-image" alt="Фото проекта">
+                        </picture>
+                      </a>
+                      <a href="img/gallery/design_re6.jpg" data-fancybox="types-gallery-2" class="types-repairs__slide swiper-slide">
+                        <picture>
+                          <source srcset="img/gallery/design_re6.webp" type="image/webp">
+                          <img src="img/gallery/design_re6.jpg" class="cover-image" alt="Фото проекта">
                         </picture>
                       </a>
                     </div>
@@ -1099,7 +1111,96 @@
                       </div>
                     </div>
                   </li>
+                  <li class="where__item hidden" data-animate="bottom">
+                    <div class="where__item-image">
+                      <picture>
+                        <source srcset="img/where/01.webp" type="image/webp">
+                        <img src="img/where/01.jpg" class="cover-image" alt="img">
+                      </picture>
+                    </div>
+                    <div class="where__item-body">
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Локация</div>
+                        <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Жилой комплекс</div>
+                        <div class="where__item-text">Mamsha Al Saadiyat</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Застройщик</div>
+                        <div class="where__item-text">Provis</div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="where__item hidden" data-animate="bottom">
+                    <div class="where__item-image">
+                      <picture>
+                        <source srcset="img/where/02.webp" type="image/webp">
+                        <img src="img/where/02.jpg" class="cover-image" alt="img">
+                      </picture>
+                    </div>
+                    <div class="where__item-body">
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Локация</div>
+                        <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Жилой комплекс</div>
+                        <div class="where__item-text">Mamsha Al Saadiyat</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Застройщик</div>
+                        <div class="where__item-text">Provis</div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="where__item hidden" data-animate="bottom">
+                    <div class="where__item-image">
+                      <picture>
+                        <source srcset="img/where/03.webp" type="image/webp">
+                        <img src="img/where/03.jpg" class="cover-image" alt="img">
+                      </picture>
+                    </div>
+                    <div class="where__item-body">
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Локация</div>
+                        <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Жилой комплекс</div>
+                        <div class="where__item-text">Mamsha Al Saadiyat</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Застройщик</div>
+                        <div class="where__item-text">Provis</div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="where__item hidden" data-animate="bottom">
+                    <div class="where__item-image">
+                      <picture>
+                        <source srcset="img/where/04.webp" type="image/webp">
+                        <img src="img/where/04.jpg" class="cover-image" alt="img">
+                      </picture>
+                    </div>
+                    <div class="where__item-body">
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Локация</div>
+                        <div class="where__item-text">Abu Dhabi Al Mamsha</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Жилой комплекс</div>
+                        <div class="where__item-text">Mamsha Al Saadiyat</div>
+                      </div>
+                      <div class="where__item-column">
+                        <div class="where__item-caption">Застройщик</div>
+                        <div class="where__item-text">Provis</div>
+                      </div>
+                    </div>
+                  </li>
                 </ul>
+                <button class="where__more btn btn-primary-outline" data-animate="bottom">Показать еще</button>
               </div>
               <div class="where__tabs-content tab-content">
                 <ul class="where__list">
@@ -1470,7 +1571,6 @@
                 </ul>
               </div>
             </div>
-            <a href="" class="where__more btn btn-primary-outline" data-animate="bottom">Показать еще</a>
           </div>
         </div>
       </section>
@@ -2033,12 +2133,12 @@
     </div>
   </div>
   <!-- plugins -->
-  <script src="js/libs/swiper-bundle.min.js?_v=20241206104348"></script>
-  <script src="js/libs/fancybox.min.js?_v=20241206104348"></script>
-  <script src="js/libs/nouislider.min.js?_v=20241206104348"></script>
+  <script src="js/libs/swiper-bundle.min.js?_v=20241212212531"></script>
+  <script src="js/libs/fancybox.min.js?_v=20241212212531"></script>
+  <script src="js/libs/nouislider.min.js?_v=20241212212531"></script>
   <!-- plugins -->
 
-  <script src="js/app.min.js?_v=20241206104348"></script>
+  <script src="js/app.min.js?_v=20241212212531"></script>
 </body>
 
 </html>
